RESOLVED FIXED95287
[BlackBerry] crash while trying to scroll any inner frame
https://bugs.webkit.org/show_bug.cgi?id=95287
Summary [BlackBerry] crash while trying to scroll any inner frame
Antonio Gomes
Reported 2012-08-28 22:19:14 PDT
PR #198510
Attachments
patch (2.74 KB, patch)
2012-08-28 22:24 PDT, Antonio Gomes
staikos: review+
Antonio Gomes
Comment 1 2012-08-28 22:24:17 PDT
Antonio Gomes
Comment 2 2012-08-29 06:02:33 PDT
Note You need to log in before you can comment on or make changes to this bug.