[BlackBerry] crash while trying to scroll any inner frame https://bugs.webkit.org/show_bug.cgi?id=95287 PR #198510

Reviewed by George Staikos.
Patch by Antonio Gomes <agomes@rim.com>

Set the starting point of scrolling (slow path only still)
for inner frames. It was left over as set to 0 by r126474.

In practice, patch fixes a crash on gmail.com desktop edition.

* WebKitSupport/InRegionScrollableArea.cpp:
(BlackBerry::WebKit::InRegionScrollableArea::InRegionScrollableArea):

Canonical link: https://commits.webkit.org/113170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126996 268f45cc-cd09-0410-ab3c-d52691b4dbfc