Source/WebKit/blackberry/WebKitSupport/InRegionScrollableArea.cpp
@@ -76,7 +76,8 @@ InRegionScrollableArea::InRegionScrollableArea(WebPagePrivate* webPage, RenderLa
         m_scrollsVertically = view->contentsHeight() > view->visibleHeight();
 
         m_overscrollLimitFactor = 0.0; // FIXME eventually support overscroll
-        m_cachedCompositedScrollableLayer = 0; // FIXME: Needs composited layer for inner frames.
+        m_camouflagedCompositedScrollableLayer = reinterpret_cast<unsigned>(m_layer->enclosingElement()); // FIXME: Needs composited layer for inner frames.
+        m_cachedNonCompositedScrollableNode = m_layer->enclosingElement();
 
     } else { // RenderBox-based elements case (scrollable boxes (div's, p's, textarea's, etc)).
 
